update testimonials.jsx . update footer.css . update headerSocials.jsx .

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -8,6 +8,13 @@ footer {
 
 footer a {
     color: var(--color-bg);
+    padding: 0.3rem;
+}
+
+footer a:hover {
+    background-color: var(--color-bg-variant);
+    border-radius: 0.7rem;
+    color: var(--color-primary);
 }
 
 .footer__logo {
