--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -10,6 +10,7 @@
     border-radius: 2rem;
     background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
     display: grid;
+    scale: 0.8;
 }
 
 .about__me-image {
