icons scale from 1 to 2

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -40,6 +40,7 @@
 .experience__details-icon {
     margin-top: 6px;
     color: var(--color-primary);
+    scale: 2;
 }
 
 @media screen and (max-width: 1024px){
