--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,71 +1,84 @@
-.experience__container {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
-}
-
-.experience__container > div {
+.timeline {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Add this line */
     background: var(--color-bg-variant);
-    padding: 2.4rem 5rem;
+    margin-right: 10%;
+    margin-left: 10%;
     border-radius: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     border: 1px solid transparent;
     transition: var(--transition);
-    width: 60%;
-    margin: 0 auto;
 }
 
-.experience__container > div:hover {
+.timeline:hover {
     background: transparent;
     border-color: var(--color-primary-variant);
     cursor: default;
 }
 
-.experience__container > div h3 {
-    text-align: center;
-    margin-bottom: 2rem;
-    color: var(--color-primary);
-}
-
-.experience__content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 2rem;
-}
-
-.experience__details {
+.timeline .title-wrapper {
     display: flex;
-    gap: 1rem;
+    /* align-items: center; */
+    gap: 15px;
+    margin-bottom: 25px;
+    /* justify-content: center; */
 }
 
-.experience__details-icon {
-    margin-top: 6px;
+.timeline-list {
+    font-size: var(--fs-6);
+    margin-left: 45px;
+    /* text-align: center; Add this line */
+}
+
+.timeline-item {
+    position: relative;
+}
+
+.timeline-item:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.timeline-item-title {
+    font-size: var(--fs-6);
+    line-height: 1.3;
+    margin-bottom: 7px;
+    display: flex;
+}
+
+.timeline-list span {
     color: var(--color-primary);
-    scale: 2;
+    font-weight: var(--fw-400);
+    line-height: 1.6;
 }
 
-@media screen and (max-width: 1024px){
-    .experience__container {
-        grid-template-columns: 1fr;
-    }
-
-    .experience__container > div {
-        width: 80%;
-        margin: 0 auto;
-        padding: 2rem;
-    }
-
-    .experience__content p {
-        padding: 1rem;
-    }
+.timeline-item:not(:last-child)::before {
+    content: "";
+    position: absolute;
+    top: -25px;
+    left: -30px;
+    width: 2px;
+    height: calc(100% + 50px);
+    background: var(--jet);
 }
-  
-@media screen and (max-width: 600px){
-    .experience__container {
-        gap: 1rem;
-    }
 
-    .experience__container > div {
-        width: 100%;
-        padding: 2rem 1rem;
-    }
+.timeline-item::after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: -33px;
+    height: 6px;
+    width: 6px;
+    /* background: var(--text-gradient-yellow); */
+    background: var(--color-primary);
+    border-radius: 50%;
+    box-shadow: 0 0 0 4px var(--jet);
+}
+
+.timeline-text {
+    color: var(--light-gray);
+    font-weight: var(--fw-300);
+    line-height: 1.6;
 }
