--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -13,7 +13,7 @@
     padding-bottom: 1rem;
     border: 1px solid transparent;
     transition: var(--transition);
-    color: var(--color-primary);
+    /* color: var(--color-primary); */
     margin-top: 0;
 }
 
@@ -91,6 +91,7 @@
 .hydrated {
     scale: 1.5;
     margin-left: 7px;
+    color: var(--color-primary);
 }
 
 @media screen and (max-width: 1225px){
