--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -44,9 +44,9 @@ header {
 }
 
 @media screen and (max-width: 1024px){
-  header {
+  /* header {
     height: 68vh;
-  }
+  } */
 
   section {
     margin-top: 6rem;
@@ -54,9 +54,9 @@ header {
 }
 
 @media screen and (max-width: 600px){
-  header {
+  /* header {
     height: 100vh;
-  }
+  } */
 
   .header__socials,
   .scroll__down {
