--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -30,6 +30,7 @@ nav a:hover {
 nav a.active {
   background: var(--color-bg);
   color: var(--color-white);
+  scale: 1.3;
 }
 
 /* the following code is for the whatsapp button */
