--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -43,6 +43,10 @@ header {
   font-size: 0.9rem;
 }
 
+.experience__details-icon {
+  margin-right: 0.8rem;
+}
+
 @media screen and (max-width: 1024px){
   /* header {
     height: 68vh;
