fixed the cv link icon color when hovering over the cv button, made it black using some JavaScript coding.

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -47,6 +47,10 @@ header {
   margin-right: 0.8rem;
 }
 
+.experience__details-icon :hover {
+  fill: var(--color-primary);
+}
+
 @media screen and (max-width: 1024px){
   /* header {
     height: 68vh;
