--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,8 @@ a {
   cursor: pointer;
   border: 1px solid var(--color-primary);
   transition: var(--transition);
+  border-bottom-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 .btn:hover {
