--- a/src/components/Embedded/Figma.css
+++ b/src/components/Embedded/Figma.css
@@ -1,42 +1,216 @@
-.linkedin-post {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+.figma-section {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  /* border-top: 2px solid var(--color-primary); */
+  border-top-left-radius: 15%;
+  border-top-right-radius: 15%;
+  /* padding-top: 5%; */
+  /* margin-bottom: 200px; */
+}
+
+.figma-thumbnails {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 70px;
+  /* make a gap between rows */
+  /* row-gap: 20px; */
+  justify-items: center;
+  width: 100%;
+  max-width: 800px;
+  padding: 0 20px;
+}
+
+@media screen and (max-width: 829px){
+  .figma-thumbnails {
+    gap: 250px;
+  }
+
+  /* for the upper border */
+  .figma-section {
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+  }
+}
+
+@media screen and (max-width: 700px){
+  .figma-thumbnails {
+    gap: 101px;
+  }
+}
+
+@media screen and (max-width: 679px){
+  .figma-thumbnails {
+    gap: 80px;
+  }
+}
+
+@media screen and (max-width: 660px){
+  .figma-thumbnails {
+    gap: 70px;
+  }
+}
+
+#prototype-title {
+  margin-bottom: 20px;
+  /* color: #AC21E8; */
+}
+
+#prototype-title::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 3px;
+  background-color: var(--color-primary);
+  margin: 10px auto;
+  border-radius: 10px;
+}
+
+#prototype-description {
+  /* make margin top and bottom 20px */
+  margin: 20px 0;
+  text-align: right;
+}
+
+.thumbnail-wrapper {
+  /* cursor: pointer; */
+  text-align: center;
+  width: 280px;
+  border: 3px solid var(--color-card);
+  box-shadow: var(--color-shadow) 0px 0px 400px;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: var(--color-bg); */
+}
+
+.figma-thumbnail {
+  width: 200px;
+  height: 790px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+}
+
+.figma-thumbnail:hover {
+  transform: scale(1.05);
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 90%;
+  max-height: 90%;
 }
 
 .figma__iframe {
-    width: 250px;
-    height: 590px;
-    border-radius: 2rem;
-    /* border: 1px solid var(--color-bg-variant); */
-    box-shadow: 0 0 10px var(--color-primary-variant);
+  width: 250px;
+  /* height: 590px was just perfect, but those guys at Figma messed it up..!!! had to make it taller than 590px */
+  height: 680px;
+  border-radius: 2rem;
+  box-shadow: 0 0 10px var(--color-bg-variant);
+}
+
+@media screen and (min-width: 830px){
+  .figma__iframe {
+    width: 400px;
+    height: 690px;
   }
 
-.note {
-    width: 250px;
+  /* .thumbnail-wrapper {
+    width: 430px;
+  } */
 }
-  
-  /* Desktop (large screens) */
-  /* @media (min-width: 1025px) {
-    .linkedin-post__iframe {
-      width: 850px;
-      height: 820px;
-    }
-  } */
-  
-  /* Tablet (medium screens) */
-  /* @media (min-width: 768px) and (max-width: 1024px) {
-    .linkedin-post__iframe {
-      width: 600px;
-      height: 580px;
-    }
-  } */
-  
-  /* Mobile (small screens) */
-  /* @media (max-width: 767px) {
-    .linkedin-post__iframe {
-      width: 100%;
-      height: 620px;
-    }
-  } */
-  
+
+.note {
+  width: 250px;
+}
+
+/* .close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+  color: black;
+} */
+
+.figma-iframe {
+  cursor: pointer;
+  border-radius: 30px;
+}
+
+#prototype-section-note {
+  font-size: 0.8rem;
+  color: #777;
+}
+
+
+/* popup CSS */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2000;
+}
+
+.popup-content {
+  background-color: var(--color-bg-variant);
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  max-width: 90%;
+  margin: 0 20px;
+  border: 1px solid var(--color-primary);
+}
+
+.popup-content p {
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.popup-content button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: var(--color-primary);
+  color: var(--color-bg-variant);
+  /* make it bold */
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+}
+
+.popup-content button:hover {
+  border: 1px solid var(--color-primary);
+  background-color: var(--color-bg-variant);
+  color: var(--color-primary);
+  transition: 0.3s;
+}
