--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -72,6 +72,11 @@
 }
 
 
+#intro-paragraph {
+    text-align: justify;
+}
+
+
 @media screen and (max-width: 1351px){
     .about__cards {
         grid-template-columns: 1fr 1fr;
