--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -20,7 +20,7 @@
 .portfolio__item-image {
   border-radius: 1.5rem;
   overflow: hidden;
-  height: 30%;
+  /* height: 30%; */
 }
 
 .portfolio__item h3 {
