--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ body {
   background-color: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/bg-texture.png);
+  background-image: url(../src/assets/papyrus-dark.webp);
 }
 
 .container {
